# arch-pkg-text

./: Cargo.toml  LICENSE.md  README.md  check-all.bash  justfile  renovate.json
.github/workflows/: test.yaml
src/: collections.rs  db.rs  desc.rs  field.rs  lib.rs  misc.rs  parse.rs  query.rs  srcinfo.rs  value.rs
src/collections/: std_ext.rs
src/db/: field.rs  query.rs
src/db/field/: parse.rs
src/db/query/: eager.rs  forgetful.rs  memo.rs
src/db/query/memo/: parking_lot_ext.rs  std_ext.rs
src/desc/: field.rs  misc.rs  query.rs
src/desc/field/: parse.rs
src/desc/misc/: derive_query_mut.rs  reuse_advice.rs
src/desc/query/: forgetful.rs  generic.rs  memo.rs  misc.rs
src/desc/query/generic/: parking_lot_ext.rs  std_ext.rs
src/desc/query/memo/: parking_lot_ext.rs  std_ext.rs
src/desc/query/misc/: derive_query_mut.rs
src/field/: parse.rs
src/misc/: static_value.rs
src/parse/: db.rs  desc.rs  partial.rs  srcinfo.rs
src/parse/srcinfo/: checksums.rs  data.rs
src/query/: common.rs  forgetful.rs  memo.rs
src/query/memo/: aliases.rs  parking_lot_ext.rs  std_ext.rs
src/srcinfo/: field.rs  misc.rs  query.rs
src/srcinfo/field/: parse.rs
src/srcinfo/misc/: derive_query_mut.rs  reuse_advice.rs
src/srcinfo/query/: checksums.rs  derivative.rs  eager.rs  forgetful.rs  generic.rs  memo.rs  misc.rs  utils.rs
src/srcinfo/query/eager/: data.rs
src/srcinfo/query/generic/: std_ext.rs
src/srcinfo/query/memo/: cache.rs
src/srcinfo/query/misc/: derive_query_mut.rs
src/value/: depend.rs  depend_and_reason.rs  depend_name.rs  depend_spec.rs  depend_spec_operator.rs  dependency.rs  dependency_and_reason.rs  dependency_name.rs  dependency_specification.rs  dependency_specification_operator.rs  hex.rs  hex128.rs  md5_checksum.rs  parse_array.rs  skip_or_array.rs  upstream_version.rs  version.rs
tests/: _utils.rs  db_eager_querier.rs  db_forgetful_querier.rs  db_memo_querier.rs  desc_forgetful_querier.rs  desc_memo_querier.rs  forgetful_querier.rs  hex.rs  issue_30.rs  memo_querier.rs  parsed_db.rs  parsed_desc.rs  parsed_srcinfo.rs  pinned_desc.rs  pinned_srcinfo.rs  srcinfo_forgetful_querier.rs  srcinfo_memo_querier.rs
tests/fixtures/complex/: .SRCINFO
tests/fixtures/has-empty-values/: .SRCINFO
tests/fixtures/multiple-checksum-types/: .SRCINFO
tests/fixtures/simple/: .SRCINFO
