[package]
name = "arch-pkg-text"
description = "Pure Rust library to parse Arch Linux packages' structured text formats"
version = "0.7.0"
authors = ["khai96_ <hvksmr1996@gmail.com>"]
license = "MIT"
edition = "2024"
repository = "https://github.com/pacman-repo-builder/arch-pkg-text.git"
readme = "README.md"
include = [
  "/src",
  "/Cargo.toml",
  "/README.md",
  "/LICENSE.md",
]
keywords = [
  "pure-rust",
  "srcinfo",
  "desc",
  "archlinux",
]
categories = [
  "no-std",
  "parsing",
]

[lib]
name = "arch_pkg_text"
path = "src/lib.rs"

[features]
default = ["std"]
parking_lot = ["std", "dep:parking_lot"]
std = ["strum/std", "dep:indexmap"]

[dependencies]
derive_more = { version = "2.0.1", default-features = false, features = ["as_ref", "deref", "display", "error"] }
lines-inclusive = "0.0.0"
indexmap = { version = "2.7.1", optional = true }
iter-scan = "0.4.0"
parking_lot = { version = "0.12.3", optional = true }
pipe-trait = "0.4.0"
typebool = "0.1.0"
strum = { version = "0.27.1", default-features = false, features = ["derive", "phf"] }

[dev-dependencies]
hex-literal = "0.4.1"
pretty_assertions = "1.4.1"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
